2008-05-28  Zoltan Varga  <vargaz@gmail.com>

	* mini-x86.h mini-x86.c inssel-x86.brg cpu-x86.md: Add support for
	CAS instrinsics. Optimize the implementation of the ATOMIC_EXCHANGE 
	opcodes.

2008-05-27  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mini_get_inst_for_method): Add support for CAS instrinsics when
	the 'value' to store is a constant.

	* mini-ops.h: Add OP_ATOMIC_CAS_IMM opcodes.

	* mini-amd64.c (mono_arch_output_basic_block): Optimize the the implementation
	of ATOMIC_EXCHANGE opcodes, add support for the CAS opcodes.

2008-05-26  Zoltan Varga  <vargaz@gmail.com>

	* mini.c generic-sharing.c jit-icalls.c aot-compiler.c: Use accessor functions
	for accessing method->generic_container.

2008-05-24  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_check_inlining): Avoid creating vtables if possible.
	
	* mini.c (SIG_HANDLER_SIGNATURE): Fix sparc build too.

	* mini.c (SIG_HANDLER_SIGNATURE): Fix IA64 build.

	* mini.c (mono_jit_compile_method_inner): Avoid a crash if mono_class_vtable ()
	fails.

2008-05-23  Zoltan Varga  <vargaz@gmail.com>

	* driver.c (mono_main): Set mono_setup_vtable_in_class_init to FALSE.

	* mini.c: Handle the case when mono_class_vtable () fails.

2008-05-23  Massimiliano Mantione  <massi@ximian.com>
	* mini.c (sigprof_signal_handler): Support call chains (backtrace) in
	the stat profiler.

2008-05-22  Mark Probst  <mark.probst@gmail.com>

	* mini.c, jit-icalls.c, jit-icalls.h: Make generic sharing work
	together with domain sharing.

2008-05-22  Mark Probst  <mark.probst@gmail.com>

	* mini.c: Treat callvirts to final methods like non-virtual calls
	when doing generic sharing, i.e. look them up in the runtime
	generic context.

2008-05-22  Mark Probst  <mark.probst@gmail.com>

	* inssel.brg, mini-ops.h: Added opcodes for mkrefany and refanyval
	with computed types (for generic sharing).

	* mini.c: Generic sharing for mkrefany and refanyval.

2008-05-22  Zoltan Varga  <vargaz@gmail.com>
